[tool.poetry]
name = "dx-tools"
version = "0.1.0"
description = ""
authors = ["Denis Grigor <denis.grigor@autodesk.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
dx_tools="main.cli:cli"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.13.0"
requests = "^2.33.0"
prettytable = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

